--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -37,7 +37,8 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    
+                    <a href="/books/<%= books[count]._id %>" class="btn btn-primary btn-sm edit">
+                    <i class="fas fa-edit fa-sm"></i> Edit</a></td>                    
                   </td>
 
                   <td class="text-center">
