--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -44,8 +44,9 @@
                   <td class="text-center">
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
-                    <!-- ------------------------ -->                   
-                    
+                    <!-- ------------------------ -->     
+                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm delete">
+                    <i class="fas fa-trash-alt fa-sm"></i> Delete</a>                    
                   </td>
                 </tr>
                 <% } %>
